--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>Sueños Luminosos</title>
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="css/styles.css">
-  <script src="src/js/main.js" defer></script>
+
+  <!-- Manifest y tema -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#222222">
 </head>
@@ -58,9 +61,6 @@
         <label for="edad">Edad:</label>
         <input type="number" id="edad" required><br>
 
-        <label for="fechaRegistro">Fecha de Registro:</label>
-        <input type="date" id="fechaRegistro" required><br>
-
         <button type="submit">Registrar Usuario</button>
       </form>
     </section>
@@ -71,7 +71,6 @@
         <input type="text" name="nombre" placeholder="Tu nombre" required />
         <input type="number" name="monto" placeholder="Monto (MXN)" required />
         <button type="submit">Donar</button>
-        <button style="display: none;">📲 Instalar App</button>
       </form>
     </section>
   </main>
@@ -95,13 +94,15 @@
     });
   </script>
 
-  <!-- Firebase -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <!-- Scripts locales -->
   <script src="Js/firebase.js"></script>
   <script src="Js/usuarioForm.js"></script>
+
+  <!-- PWA principal -->
+  <script src="src/js/main.js" defer></script>
 </body>
 </html>
