--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <section id="home">
       <h1>Bienvenidos a Onio</h1>
       <p>
-        En esta historia acompañarás a William, un pequeño niño atrapado en su propia mente, donde sus temores han tomado forma y control...
+        En esta historia acompañarás a William, un pequeño niño atrapado en su propia mente, donde sus temores han tomado forma y control. Con la ayuda de sus amigos —manifestaciones de su conciencia—, William deberá enfrentarse a peligrosos enemigos y recorrer mundos llenos de desafíos para alcanzar y detener al miedo que lo mantiene prisionero.
+Cada batalla es un paso más para recuperar su libertad y vencer aquello que lo atormenta desde dentro
       </p>
     </section>
 
@@ -42,6 +43,8 @@
       <h2>Sobre Donate Mind</h2>
       <p>
         En Donate Mind no solo jugamos… ¡cambiamos el juego! 🎮
+Creamos mundos llenos de acción y aventuras que, además de divertir, despiertan conciencia sobre los trastornos mentales.
+Aquí, cada partida es una oportunidad para aprender, empatizar y ayudar
       </p>
 
       <!-- Botón Android/desktop (se muestra cuando beforeinstallprompt dispara) -->
